[package]
name = "signal-piv"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
yubikey = { path = "../yubikey.rs", features = ["untested"] }
hex = "0.4.3"